Fix broken layouts for smartphone browsing.

--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -170,7 +170,7 @@ a.nav-link, .navbar-brand, .beautiful-jekyll-footer a {
 .flex-home > a {
   flex: 1;
   text-align: center;
-  margin: 10px;
+  margin: 5px;
   text-decoration: none;
   color: {{ site.text-col | default: "#404040" }};
   word-break: keep-all;
