--- a/assets/css/smartphone.css
+++ b/assets/css/smartphone.css
@@ -4,7 +4,7 @@ layout: null
 
 @media (max-width: 550px) {
   .flex-home > a {
-    font-size: 0.8rem;
+    font-size: min(3vw, 0.8rem);
   }
   .home-img img {
     height: 60px;
